# freertos_default_config

./: CMakeLists.txt
config/: CMakeLists.txt
config/freertos_config/: FreeRTOSConfig.h
config/lwip_config/: lwipopts.h
